Fixed navbar glitch on mobile

--- a/index.css
+++ b/index.css
@@ -4,11 +4,12 @@
 
 /* For phone screens */
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 991px) {
   .navbar-collapse {
     background-color: black;
-    min-width: 100vw;
-    margin: 0;
+    width: 50vw;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
 }
 
@@ -18,13 +19,14 @@ body {
   width: 100%;
   margin: auto;
 }
-
+/*
 ::-webkit-scrollbar {
     display: none;
 }
-
+*/
 #portfolio {
   height: 100%;
+  max-width: 100%;
 }
 
 /* Styling for navigation bar */
@@ -53,7 +55,7 @@ ul li {
   background-size: cover;
   background-attachment: fixed;
   min-height: 100vh;
-  min-width: 100%;
+  max-width: 100%;
 }
 
 #introduction {
